--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>AJAX - Javascript</title>
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <h1>Ajax - Javascript</h1>
-   
+
     <script src="js/custom.js"></script>
-</body>
-
+  </body>
 </html>
-
